syntax = "proto3";

option csharp_namespace = "AdvancedTaskControl.GRPCProto";

package userTask;

service UserTaskGRPC {
  rpc AddUserTask (UserTaskValue) returns (UserTaskReply);
}

message UserTaskValue {
	string message = 1;
}

// The response message containing the greetings.
message UserTaskReply {
  string message = 1;
}
